--- a/patient/src/main/resources/application.properties
+++ b/patient/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=patient
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
