--- a/apigateway/pom.xml
+++ b/apigateway/pom.xml
@@ -84,6 +84,12 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.7</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
